Layout issue.

--- a/resources/js/Pages/Public/Home/Home.scss
+++ b/resources/js/Pages/Public/Home/Home.scss
@@ -82,7 +82,7 @@
                 }
             }
             &.init {
-                padding-top: 50%;
+                padding-top: 25vh;
                 .input-wrapper input {
                     translate: transformY(-50%);
                 }
